# ECOMMERCE_WEB_APP

./: .gitignore  chagpt chat 1.txt
backend/: .pre-commit-config.yaml  poetry.toml  pyproject.toml
backend/src/: main.py
